# agentic_terminal

./: Cargo.toml  LICENSE  readme.md
src/: anthropic.rs  llm.rs  log.rs  main.rs  openai.rs  terminal.rs
