[package]
name = "agentic_terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
uuid = { version = "1.11.0", features = ["v7", "fast-rng"] }
dirs = "5.0.1"
clap = { version = "4.5.23", features = ["derive"] }
